# gt-extras

./: .gitignore  Makefile  README.md  about.html  compare_tables.html  compare_themes.py  index.html  pyproject.toml  robots.txt  sandbox.qmd  search.json  sitemap.xml
.github/: CONTRIBUTING.md
articles/: intro.html
docs/: .gitignore  _quarto.yml  _sidebar.yml  objects.json  styles.css
examples/: before-after.html  index.html  raw.embed-preview.html  raw.html  raw.qmd  show-last.html  with-code.html
get-started/: index.html
gt_extras/: __init__.py  _utils_color.py  _utils_column.py  _utils_column2.py  _utils_plotting.py  colors.py  formatting.py  highlight_cols.py  html.py  icons.py  images.py  plotting.py  styling.py  summary.py  themes.py  utilities.py
reference/: add_text_img.html  fa_icon_repeat.html  fmt_pct_extra.html  gt_add_divider.html  gt_color_box.html  gt_data_color_by_group.html  gt_duplicate_column.html  gt_fa_rank_change.html  gt_fa_rating.html  gt_fmt_img_circle.html  gt_highlight_cols.html  gt_highlight_rows.html  gt_hulk_col_numeric.html  gt_hyperlink.html  gt_merge_stack.html  gt_plt_bar.html  gt_plt_bar_pct.html  gt_plt_bar_stack.html  gt_plt_bullet.html  gt_plt_conf_int.html  gt_plt_donut.html  gt_plt_dot.html  gt_plt_dumbbell.html  gt_plt_summary.html  gt_plt_winloss.html  gt_theme_538.html  gt_theme_dark.html  gt_theme_dot_matrix.html  gt_theme_espn.html  gt_theme_excel.html  gt_theme_guardian.html  gt_theme_nytimes.html  gt_theme_pff.html  gt_two_column_layout.html  img_header.html  index.html  with_hyperlink.html  with_tooltip.html
(+59 files in other folders)
