[project]
name = "gt-extras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
license.file = "LICENSE"
dependencies = [
    "great-tables>=0.17.0",
]
authors = [
    { name = "Jules Walzer-Goldfeld", email = "jules.walzergoldfeld@gmail.com"},
    { name = "Michael Chow", email = "mc_al_github@fastmail.com" },
    { name = "Rich Iannone", email = "rich@posit.co"}
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["tables", "html"]

[dependency-groups]
dev = [
    "quartodoc>=0.8.1; python_version >= '3.9'",
    "griffe==0.38.1",
    "polars",
    "pandas",
    "pyarrow",
    "pytest>=3",
    "pytest-cov",
    "syrupy"
]



[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]
